Enhance header with search and theme options
Added search input and theme button to the header. Included ad banners in the layout.

--- a/İndex.html
+++ b/İndex.html
@@ -10,9 +10,15 @@
 
 <header>
     <h1>Duvar Kağıdı Dünyası</h1>
+
+    <div class="top-right">
+        <input type="text" id="searchInput" placeholder="Duvar kağıdı ara...">
+        <button id="themeBtn">🌙</button>
+    </div>
 </header>
 
 <nav id="categories">
+    <button data-category="hepsi">Tümü</button>
     <button data-category="doga">Doğa</button>
     <button data-category="araba">Araba</button>
     <button data-category="manzara">Manzara</button>
@@ -25,7 +31,11 @@
     <button data-category="oyun">Oyun</button>
 </nav>
 
+<div class="ad-banner">Reklam Alanı (728x90)</div>
+
 <div id="gallery"></div>
+
+<div class="ad-banner">Reklam Alanı (728x90)</div>
 
 <script src="script.js"></script>
 
