--- a/İndex.html
+++ b/İndex.html
@@ -1,43 +1,44 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
-    <meta charset="UTF-8">
-    <title>Duvar Kağıdı Dünyası</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>Duvar Kağıdı Dünyası</title>
+  <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
 
 <header>
-    <h1>Duvar Kağıdı Dünyası</h1>
-
-    <div class="top-right">
-        <input type="text" id="searchInput" placeholder="Duvar kağıdı ara...">
-        <button id="themeBtn">🌙</button>
-    </div>
+  <h1>Duvar Kağıdı Dünyası</h1>
+  <div class="top-right">
+    <input id="searchInput" placeholder="Duvar kağıdı ara...">
+    <button id="themeBtn" title="Tema değiştir">🌙</button>
+    <a class="admin-link" href="admin.html">Admin</a>
+  </div>
 </header>
 
 <nav id="categories">
-    <button data-category="hepsi">Tümü</button>
-    <button data-category="doga">Doğa</button>
-    <button data-category="araba">Araba</button>
-    <button data-category="manzara">Manzara</button>
-    <button data-category="minimal">Minimal</button>
-    <button data-category="anime">Anime</button>
-    <button data-category="4k">4K</button>
-    <button data-category="hayvan">Hayvanlar</button>
-    <button data-category="insan">Kız / Erkek</button>
-    <button data-category="soyut">Soyut</button>
-    <button data-category="oyun">Oyun</button>
+  <button data-category="hepsi">Tümü</button>
+  <button data-category="doga">Doğa</button>
+  <button data-category="araba">Araba</button>
+  <button data-category="manzara">Manzara</button>
+  <button data-category="minimal">Minimal</button>
+  <button data-category="anime">Anime</button>
+  <button data-category="4k">4K</button>
+  <button data-category="hayvan">Hayvanlar</button>
+  <button data-category="insan">Kız / Erkek</button>
+  <button data-category="soyut">Soyut</button>
+  <button data-category="oyun">Oyun</button>
 </nav>
 
-<div class="ad-banner">Reklam Alanı (728x90)</div>
+<div class="ad-banner">Reklam Alanı (örnek)</div>
 
-<div id="gallery"></div>
+<main id="gallery" class="masonry" aria-live="polite"></main>
 
-<div class="ad-banner">Reklam Alanı (728x90)</div>
+<div id="loading" class="loading">Yükleniyor...</div>
+
+<div class="ad-banner">Reklam Alanı (örnek)</div>
 
 <script src="script.js"></script>
-
 </body>
 </html>
